@@ -1,6 +1,7 @@
 v0.4.0-alpha1
 =============
 
+  FIXED: Dynamic TranslationOptions model name.
 CHANGED: Use app-level translation files in favour of a single project-level
          one. Adds an autoregister feature similiar to the one provided by
          Django's admin. A new setting MODELTRANSLATION_TRANSLATION_FILES keeps
